source/sass/wagtail/blocks.scss
.full-width {
  @extend .no-gutters;
  @extend .px-0;
  @extend .mx-0;
  @extend .w-100;
  @extend .mw-100;
}

.full-width-image-block {
  @extend .full-width;
}

.primary-page-content {
  &.wide {
    .streamfield-content {
      @apply tw-relative tw-w-full tw-px-8 tw-flex-grow-0 tw-flex-shrink-0 tw-basis-full tw-max-w-full;
    }
  }

  &.narrow {
    .streamfield-content {
      @apply tw-relative tw-w-full tw-px-8 medium:tw-flex-grow-0 medium:tw-flex-shrink-0 medium:tw-basis-8/12 medium:tw-max-w-[8/12];
    }
  }
}

.article-page-content {
  .streamfield-content {
    @apply tw-relative tw-w-full tw-px-8 medium:tw-flex-grow-0 medium:tw-flex-shrink-0 medium:tw-basis-10/12 medium:tw-max-w-[10/12];
    &.wide {
      @apply tw-relative tw-w-full tw-px-8 tw-flex-grow-0 tw-flex-shrink-0 tw-basis-full tw-max-w-full;
    }
  }
}

.blog-body {
  .streamfield-content {
    @extend .col-lg-8;
    &.wide {
      @apply tw-relative tw-w-full tw-px-8 tw-flex-grow-0 tw-flex-shrink-0 tw-basis-full tw-max-w-full;
    }
    &.full-width {
      @apply tw-relative tw-flex-grow-0 tw-flex-shrink-0 tw-basis-full;
      @extend .full-width;
    }
  }
}

.opportunity-page-content {
  .streamfield-content {
    @apply tw-relative tw-w-full tw-px-0 medium:tw-flex-grow-0 medium:tw-flex-shrink-0 large:tw-basis-full large:tw-max-w-full;
  }
}

.campaign-page-content {
  .streamfield-content {
    @extend .px-0;
  }
  &.wide {
    .streamfield-content {
      @extend .col-12;
    }
  }

  &.narrow {
    .streamfield-content {
      @extend .col-md-7;
    }
  }
}

.donate-help-page-content {
  .streamfield-content {
    @extend .px-0;
    @extend .col-12;
  }
}

.mozfest-content {
  &.two-col {
    @extend .p-0;
    @extend .col-lg-7;
    .streamfield-content {
      @extend .col-lg-12;
    }
  }
  &.wide {
    .streamfield-content {
      @extend .col-12;
    }
  }
  .streamfield-content {
    @extend .col-lg-8;
  }
}

.share-button-blog-title-container {
  margin-bottom: -2em;
}

